--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,34 @@
 version: "3.9"
 services:
   db:
+    container_name: db
     image: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: password
   api:
+    container_name: api
     build: ./api
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - ./api:/equipment-rental/api
-    ports:
-      - "3000:3000"
     depends_on:
       - db
+  app:
+    container_name: app
+    image: "node:17-alpine"
+    user: "node"
+    working_dir: /equipment-rental/app
+    volumes:
+      - ./app:/equipment-rental/app
+    command: "npm start"
+    depends_on:
+      - api
+  yaichi:
+    container_name: yaichi
+    image: mtsmfm/yaichi:1.7.0
+    ports:
+      - 80:3000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
